# bats

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.cfg
.conda/conda-meta/: bzip2-1.0.8-he774522_0.json  ca-certificates-2023.01.10-haa95532_0.json  history  libffi-3.4.4-hd77b12b_0.json  openssl-1.1.1t-h2bbff1b_0.json  pip-23.0.1-py310haa95532_0.json  python-3.10.11-h966fe2a_2.json  setuptools-66.0.0-py310haa95532_0.json  sqlite-3.41.2-h2bbff1b_0.json  tk-8.6.12-h2bbff1b_0.json  tzdata-2023c-h04d1e81_0.json  vc-14.2-h21ff451_1.json  vs2015_runtime-14.27.29016-h5e58377_2.json  wheel-0.38.4-py310haa95532_0.json  xz-5.4.2-h8cc25b3_0.json  zlib-1.2.13-h8cc25b3_0.json
bash/: prediction_files_to_feather.bash  rename_prediction_files.bash
bats_transformer/: .run2.sh.swp  .run3.sh.swp  .train.py.swp  .train_pca.py.swp  README  README.md  Test.ipynb  Test2.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  env.yml  eval_val_loss.ipynb  run.sh  run2.sh  run3.sh  run_pca.sh  run_size_experiments.py  telegram_utils.py  test.py  train.ipynb  train.py  train_pca.py  utils.py
bats_transformer/data/: bats_dataset.py  bats_dataset_better.py  data.csv  prepare_data.py  prepare_data_for_clustering.py  prepare_data_legacy.py  prepare_data_nodup.py  preprocess.py  split_dataframe.py
bats_transformer/models/: random_seed_1.ckpt  random_seed_10.ckpt  random_seed_2.ckpt  random_seed_3.ckpt  random_seed_4.ckpt  random_seed_42.ckpt  random_seed_5.ckpt  random_seed_6.ckpt  random_seed_7.ckpt  random_seed_8.ckpt  random_seed_9.ckpt
bats_transformer/notebooks/: Standard Scalar Tryout.ipynb  Untitled.ipynb  Untitled3.ipynb  eval_val_loss.ipynb  pca_analysis.ipynb  plot_variances.ipynb  trend_analysis-Copy1.ipynb
bats_transformer/scripts/: bats_transformer_epochs_eval.py  copy_audio_files.py  plot_variances.py  run.sh  run2.sh  run3.sh  run_pca.sh  run_pca_reduced.sh  test_bats_transformer.py  train_0_25_quartile.sh  train_0_5_quartile.sh  train_bats_transformer.py  train_bats_transformer.sh  utils.py
scripts/: prepare_data.py
src/: 1.csv-BatchParameters_v4.4.5.txt  test_audio_CumulativeSonoBatch_v4.4.5-BatchSummary.txt  test_audio_CumulativeSonoBatch_v4.4.5-NightlySummary.txt  test_audio_Parameters_v4.4.5.txt  test_audio_SonoBatch_v4.4.5.txt
src/andrew/: analyze_species_distribution.ipynb  baseline_model.py  error_distribution_analysis.ipynb  eval_analysis.ipynb  model_feature_importance.ipynb  test_model_accuracy.ipynb
src/bat_id/: explore.py  explore_sonobat_features.ipynb  guerrero_playground.ipynb  sonobat_pulse_features_for_30_recordings.csv  test_batdetect2.py
src/data_calcs/: data_calcs.py  (+12 more)
(+419 files in other folders)
