[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bats"
version = "0.1.0"
description = "Analyzing bat chirps"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Andreas Paepcke", email = "paepcke@cs.stanford.edu"}
]
requires-python = ">=3.12"
dependencies = [
    "astral>=3.2",
    "click>=8.1.7",
    "imbalanced_learn>=0.12.3",
    "joblib>=1.4.0",
    "librosa>=0.10.1",
    "logging_singleton>=1.0.1",
    "matplotlib>=3.8.4",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "pyarrow>=22.0.0",
    "pytorch_lightning>=2.3.0",
    "pytz>=2024.1",
    "Requests>=2.32.3",
    "scikit_learn>=1.5.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "sympy>=1.12",
    "tifffile>=2024.4.18",
    "torch>=2.2.2",
    "torchaudio>=2.2.2",
    "tqdm==4.66.2",
    "typing_extensions>=4.12.2",
    "pantab>=5.2.2",
]

[project.optional-dependencies]
test = ["nose2>=0.9.2"]

[project.urls]
Repository = "https://github.com/paepcke/bats.git"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.setuptools.packages.find]
where = ["src"]
