[metadata]
name = bats
version = 0.1.0
author = Andreas Paepcke
author_email = paepcke@cs.stanford.edu
description = Analyzing bat chirps
long_description = file: README.md
long_description_content_type = text/markdown
url = git@github.com:paepcke/bats.git
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues

[options]

# Empty key in package_dir specifies root of packages;
# value is relative to proj root:

package_dir=
    = src

# Find the packages to include in distributions
# (that's different from the dependencies):
packages=find:

install_requires =
          astral>=3.2
          click>=8.1.7
          imbalanced_learn>=0.12.3
          joblib>=1.4.0
          librosa>=0.10.1
          logging_singleton>=1.0.1
          matplotlib>=3.8.4
          numpy>=2.0.0
          pandas>=2.2.2
          plotly>=5.22.0
          pyarrow>=16.0.0
          pytorch_lightning>=2.3.0
          pytz>=2024.1
          Requests>=2.32.3          
          scikit_learn>=1.5.0
          scipy>=1.14.0
          seaborn>=0.13.2
          sympy>=1.12
          tifffile>=2024.4.18
          torch>=2.2.2
          torchaudio>=2.2.2
          tqdm==4.66.2
          typing_extensions>=4.12.2
          pantab>=4.1.0
                            
python_requires = >=3.7

[options.extras_require]

test = nose2>=0.9.2
